# mnem

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  NOTICE  README.es.md  README.md  README.zh-CN.md  SECURITY.md  clippy.toml  deny.toml  docker-compose.yml  rust-toolchain.toml  rustfmt.toml
crates/mnem-ann/: Cargo.toml  README.md
crates/mnem-ann/examples/: hnsw_vs_brute.rs
crates/mnem-ann/src/: hnsw.rs  knn_edges.rs  lib.rs
crates/mnem-ann/tests/: knn_edges_proptest.rs  knn_edges_unit.rs
crates/mnem-backend-redb/: Cargo.toml  README.md
crates/mnem-backend-redb/benches/: redb_vs_memory.rs
crates/mnem-backend-redb/examples/: index_scaling_bench_redb.rs  perf_commit_scaling_redb.rs  perf_retrieve_redb_vs_memory.rs  persist.rs  redb_vs_memory.rs
crates/mnem-backend-redb/src/: blockstore.rs  knn_edges_store.rs  lib.rs  op_heads.rs
crates/mnem-bench/: Cargo.toml  README.md
crates/mnem-bench/examples/: smoke.rs  smoke_convomem.rs  smoke_membench.rs
crates/mnem-bench/src/: adapter.rs  bench.rs  embed.rs  lib.rs  output.rs  runner.rs  tui.rs
crates/mnem-cli/: Cargo.toml  README.md
crates/mnem-cli/examples/: shell_integration.rs
crates/mnem-cli/src/: config.rs  doctor.rs  global.rs  integrate.rs  main.rs  repo.rs  unintegrate.rs  wizard.rs
crates/mnem-cli/tests/: blame.rs  branch.rs  cat_file.rs  clone.rs  config_global.rs  config_per_repo.rs  deferred_verbs.rs  determinism_content_cid.rs  diff.rs  export_import.rs  gc.rs  global_graph.rs  ingest_code_files.rs  merge.rs  regression.rs  reindex_lift_legacy.rs  remote.rs  remote_verbs.rs  retrieve_explain.rs  revert.rs  show_and_log.rs  switch.rs  tag.rs  wire_keybert_ingest.rs  wizard_non_tty.rs
crates/mnem-core/: Cargo.toml  README.md
crates/mnem-core-testutils/: Cargo.toml  README.md
crates/mnem-core-testutils/src/: lib.rs
crates/mnem-core/benches/: commit.rs  dual_adjacency.rs  graph_expand.rs  retrieve.rs
crates/mnem-core/examples/: agent_memory_killer.rs  agent_retrieve_under_budget.rs  cas_and_linearize.rs  commit_and_op_log.rs  hash_round_trip.rs  in_memory_store.rs  index_scaling_bench.rs  perf_commit_scaling.rs  perf_layer_attribution.rs  prolly_chunker.rs  prolly_diff.rs  prolly_tree.rs  q0_put_trusted_ingest_bench.rs  repo_init_commit.rs  sign_and_verify.rs  stable_ids.rs
crates/mnem-core/src/: anchor.rs  error.rs  guard.rs  lib.rs  llm.rs  ppr.rs  rerank.rs  sign.rs  sparse.rs
crates/mnem-core/tests/: agent_flow.rs  community_expander_additive.rs  community_filter_zero_impact.rs  determinism_properties.proptest-regressions  determinism_properties.rs  fuzz_parsers.rs  g16_thread_invariance.rs  g17_sparse_sidecar.rs  graph_expand_ppr_zero_impact.rs  hybrid_adjacency_union.rs  merge_fixtures.rs  merge_properties.rs  ppr_convergence.rs  ppr_determinism.rs  ppr_size_gate.rs  ppr_small.rs  ppr_with_matrix.rs  q0_put_trusted_safety_net.rs  retrieve_quality.rs
crates/mnem-embed-providers/: Cargo.toml  README.md
crates/mnem-embed-providers/src/: config.rs  embedder.rs  error.rs  http.rs  lib.rs  manifest.rs  mock.rs  ollama.rs  onnx.rs  openai.rs
crates/mnem-embed-providers/tests/: embed_batch_parity.rs  manifest_proptest.rs
crates/mnem-extract/: Cargo.toml  README.md
crates/mnem-extract/src/: cooccurrence.rs  inference.rs  keybert.rs  lib.rs  traits.rs  trust.rs
crates/mnem-extract/tests/: ingest_with_extractor.rs  keybert_fixture.rs  proptest_determinism.rs
crates/mnem-graphrag/: Cargo.toml  README.md
crates/mnem-graphrag/src/: calibration.rs  community.rs  confidence.rs  lib.rs  summarize.rs
crates/mnem-graphrag/tests/: graphrag_vs_rag_demo.rs  leiden_karate.rs  modularity.rs  proptest_determinism.rs  summarize_determinism.rs  summarize_fixture.rs
crates/mnem-http/: Cargo.toml  README.md
crates/mnem-http/examples/: smoke_client.rs
crates/mnem-http/src/: auth.rs  correlation.rs  error.rs  handlers.rs  handlers_ingest.rs  lib.rs  main.rs  metrics.rs  remote_rate_limit.rs  state.rs
crates/mnem-http/tests/: error_envelope.rs  integration.rs  metrics_counter_increments.rs  metrics_endpoint.rs  summarize_http.rs  wire_community_filter.rs  wire_explain.rs  wire_graph_mode_ppr.rs  wire_knn_fallback.rs  wire_leiden_cache.rs  wire_ppr_size_gate.rs  wire_summarize.rs  wire_traverse_answer_route.rs  wire_warnings.rs
crates/mnem-ingest/: Cargo.toml  README.md
crates/mnem-ingest/src/: chunk.rs  code.rs  conversation.rs  error.rs  extract.rs  extract_keybert.rs  extract_llm.rs  lib.rs  md.rs  pdf.rs  pipeline.rs  sidecar.rs  text.rs  types.rs
crates/mnem-ingest/tests/: e2e.rs
crates/mnem-llm-providers/: Cargo.toml  README.md
crates/mnem-llm-providers/src/: config.rs  http.rs  lib.rs  ollama.rs  openai.rs
crates/mnem-mcp/: Cargo.toml  README.md
crates/mnem-mcp/examples/: tool_list.rs
crates/mnem-mcp/src/: lib.rs  main.rs  protocol.rs  server.rs
crates/mnem-mcp/tests/: dispatch.rs  resolve_or_create.rs
crates/mnem-py/: Cargo.toml  README.md  pyproject.toml
crates/mnem-py/examples/: quickstart.py
crates/mnem-py/src/: lib.rs
crates/mnem-py/tests/: test_mnem_bench_gate.py
crates/mnem-rerank-providers/: Cargo.toml  README.md
crates/mnem-rerank-providers/src/: cohere.rs  config.rs  http.rs  jina.rs  lib.rs  onnx.rs  voyage.rs
crates/mnem-rerank-providers/tests/: http_round_trip.rs
crates/mnem-sparse-providers/: Cargo.toml  README.md
crates/mnem-sparse-providers/src/: config.rs  lib.rs  onnx.rs  sidecar.rs
crates/mnem-transport/: Cargo.toml  README.md
crates/mnem-transport/benches/: car.rs
crates/mnem-transport/examples/: export_then_import.rs
crates/mnem-transport/src/: car.rs  client.rs  error.rs  export.rs  have_set.rs  import.rs  lib.rs  protocol.rs  remote.rs  secret_token.rs
crates/mnem-wasm/: Cargo.toml
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
fuzz/: .gitignore  Cargo.toml  README.md  REGRESSIONS.md
fuzz/corpus/: .gitattributes
fuzz/fuzz_targets/: car_import.rs  ingest_pdf.rs  walk_ipld.rs
py-packages/mnem-cli/: README.md  hatch_build.py  pyproject.toml
(+344 files in other folders)
